--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Shovan Thinks!</title>
    
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
-  <body class="back" tracingsrc="IMAGES/DSC_0139.JPG" tracingopacity="72">
+  <body class="back" tracingsrc="DSC_0139.JPG" tracingopacity="72">
     <p class="p1"style="color:MediumSeaGreen;">Ok this website is for Sharing thoughts </p>
     <p class="p2" style="color:SeaGreen;">A place where any one can express their desire!
     Contains LifeStyle videos and Images </p>
