--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="ball.css">
     <title>Shovan Thinks!</title>
-   
+  <img src="Images/Shovan.jpg" alt="my picture" width="128" height="128"/> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
   <body class="back" tracingsrc="DSC_0152.JPG" tracingopacity="72">
     <p class="p1"style="color:MediumSeaGreen;">Ok this website is for Sharing thoughts </p>
