--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <link rel="stylesheet" type="text/css" href="ball.css">
     <title>Shovan Thinks!</title>
     <div class="flex-container">
-  <img download src="Images/Shovan.jpg" alt="my picture" width="128" height="128"/> </div>
+  <img download src="Shovan.jpg" alt="my picture" width="128" height="128"/> </div>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
   <body class="back" tracingsrc="DSC_0152.JPG" tracingopacity="72">
     <p class="p1"style="color:MediumSeaGreen;">Ok this website is for Sharing thoughts </p>
