--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="ball.css">
-    <title>Shovan Thinks!</title> 
+    <title>Shovan Thinks!</title> <div><a href="cv.html">Click me</a></div><br>
   <img download src="Shovan.jpg" alt="my picture" width="128" height="128"/>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
   <body class="back" tracingsrc="DSC_0152.JPG" tracingopacity="72">
