--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="ball.css">
-    <title>Shovan Thinks!</title> <div><a href="cv.html">Click me</a></div><br>
-  <img download src="Shovan.jpg" alt="my picture" width="128" height="128"/>
+    <title>Shovan Thinks!</title> 
+  <img download src="Shovan.jpg" alt="my picture" width="128" height="128"/><br><a href="cv.html">Click me</a>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
   <body class="back" tracingsrc="DSC_0152.JPG" tracingopacity="72">
     <p class="p1"style="color:MediumSeaGreen;">Ok this website is for Sharing thoughts </p>
