--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="ball.css">
     <title>Shovan Thinks!</title> 
-  <p><img download src="Shovan.jpg" alt="my picture" width="128" height="128"/> <br><br><br><a href="cv.html" color="white">Click me</a></p>
+  <p><img download src="Shovan.jpg" alt="my picture" width="128" height="128"/> <br><a href="cv.html" color="white">Click me</a></p>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
   <body class="back" tracingsrc="DSC_0152.JPG" tracingopacity="72">
     <p class="p1"style="color:MediumSeaGreen;">Ok this website is for Sharing thoughts </p>
