--- a/cv.html
+++ b/cv.html
@@ -6,5 +6,6 @@
 <body>
 	<p>hello</p>
 	<img src="Images/Shovan.jpg" alt="my picture" width="128" height="128"/>
+	<img src="https://photos.google.com/photo/AF1QipO8iYQ0gDbjkk_KJMUms0rO6U3ZVR49Vvo4jidF" alt="gaming friends"/>
 </body>
 </html>
