--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<p>hello</p>
-	<img src="Images/Shovan.jpg" alt="my picture" width="128" height="128"/>
-	<img src="https://photos.google.com/photo/AF1QipO8iYQ0gDbjkk_KJMUms0rO6U3ZVR49Vvo4jidF" alt="gaming friends"/>
+	<img src="Images/Shovan.jpg" alt="my picture" download/>
+	<img src="https://photos.google.com/photo/AF1QipO8iYQ0gDbjkk_KJMUms0rO6U3ZVR49Vvo4jidF" alt="gaming friends" download/>
 </body>
 </html>
