--- a/cv.html
+++ b/cv.html
@@ -4,8 +4,10 @@
 	<title>My home</title>
 </head>
 <body>
-	<p>hello</p>
-	<img src="Images/Shovan.jpg" alt="my picture" download/>
-	<img src="https://photos.google.com/photo/AF1QipO8iYQ0gDbjkk_KJMUms0rO6U3ZVR49Vvo4jidF" alt="gaming friends" download/>
+	<p>My Images</p>
+	<ul>
+	<li><img src="Images/Shovan.jpg" alt="my picture" download/></li>
+	<li><img src="https://photos.google.com/photo/AF1QipO8iYQ0gDbjkk_KJMUms0rO6U3ZVR49Vvo4jidF" alt="gaming friends" download/></li>
+	</ul>
 </body>
 </html>
