--- a/cv.html
+++ b/cv.html
@@ -5,9 +5,11 @@
 </head>
 <body>
 	<p>My Images</p>
+	<p>
 	<ul>
-	<li><img src="Images/Shovan.jpg" alt="my picture" download/></li>
-	<li><img src="https://photos.google.com/photo/AF1QipO8iYQ0gDbjkk_KJMUms0rO6U3ZVR49Vvo4jidF" alt="gaming friends" download/></li>
+	<li><img download src="Shovan.jpg" alt="my picture" width="128" height="128"/></li>
+	<li><img download src="https://photos.google.com/photo/AF1QipO8iYQ0gDbjkk_KJMUms0rO6U3ZVR49Vvo4jidF" alt="gaming friends"/></li>
 	</ul>
+	</p>
 </body>
 </html>
