--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
 	<p>
 	<ul>
 	<li><img download src="Shovan.jpg" alt="my picture" width="128" height="128"/></li>
-	<li><img download src="https://photos.google.com/photo/AF1QipO8iYQ0gDbjkk_KJMUms0rO6U3ZVR49Vvo4jidF" alt="gaming friends"/></li>
+	<li><img download src="https://lh3.googleusercontent.com/6o4J0klcwr5MSRYJwBO5ZJIaz6vO6Xx3leWPsrMwn_Wm_vbpFaiUIz28PvR73j3A1UPE6hykNX_787SZj41bc0USOcuIiSV2jewqJVG2u1G8KGsyQ2TuDXbuOm8ex0HLsxx4fGcxCjFXp7FcF_qf87AdlBopP05p1szoo_LArmSHbwhYA-yiZGKFIbIscHgy_Xz4GMwMbVG7H3mQ5URXoZkepenZZWZwKfCVmdNOGDBP3iJpxX9x4RhwqV6mjnU7vIex4xSjmihFUnpNRIWrYXkSBxUapQ2QlQPsG3i61cp7Rdy6GaEaZj89FXJtHnafOygJslr8mp1ZW43VB6ht0YCwjQ_HcOTouJI_3iCSX5BfFBwGKUC3cfa3vQqXuCaUkKq-KVdP1n9gihcGIJ4lREvwvWLsLoqJcUf0L19TjIW7jWXOwa6Fqct34xcsua2zGk3m5c7X7LhfKY25NC6sNOMi3jDiILdsjnwP6UGMQ6QgSlIXZy7UZABikWMk9V9WgLlw41_SbokRoPH6Spc1rWlcMD4jclu37XwWHQqOnbbej7wrvJWQXLS-ot6JZ5_KwOlfb2IEXmo3YriM9rssDWRc18AoVaWAL2bWB-IjlJ_I0QxpHabjRFYdfZERBWc_crpljWMieENh8KIyVn5jJMcIJUZQ1lgCnxlBdrEOucVGtO3Jh90XTxyu=w192-h256-no" alt="gaming friends"/></li>
 	</ul>
 	</p>
 </body>
