--- a/cv.html
+++ b/cv.html
@@ -13,6 +13,16 @@
 	<li><img download src="https://lh3.googleusercontent.com/L3PMJoNE7Dr_atiQUxDp75RYVDCgxMfx9G68evSoyKq5kqwOgmYNAlWqiZ1WoRlsW7a5cm8oni5khJGkjQjxTbqwDBWYz3_m_ARvis-hnGXxNdHe5rbpQeXDKRTBwDFV805jBhJm9RSIR5D3rcHopwsy40leonMWfB1qdOGogfS2vbXFKgSoUzmDAx2tauWwcUDJI8Do792H6rVmjpf4qQQPaTnXv7t9nJnJHYuMPOG-Q3SsmasOF5-ahLOFTuny-Cp3jmbRHdqTsFX0dmUvhfDvo2qrtIexe_dO63xF87IWIyNIGNPL3xgE_CZHBnBygwIinbHQTjEdl0Wrj-4Uww9e_FoSQHX59y78NoUxdYhhTWgNwvxp5UqKeJpjcHmRlpYC828wXq6c2wI-jYkMnyMQSyaOHG1kCSlPK4OMoulD4-xlz5IDIfh8EyoKIcOAG12G6u62HJi62kDjf6v6l41OM144oWwrk_6mB6aacAEsaqDOpDbJV1ONs1y97oo0AQiHvCWFl0ZOoVOPp8zQyfN1mSs0cB3gwYMYNe1Xs5Pnpwt-j5wzR2wu_L4X0L7UUlzkMoWMlFRg8hxiJ-sUt5bO7142jsmuhWZVfbyDyX11yBpwxKJSSbndROZvTbo1c7D22l_XSSlzyJCfFsrHJL-nlCe0f1SHqJSc6ChuRev3NNcBCmqxLhCX=w1223-h917-no"alt="my picture"/></li>	
 	<li><img download src="https://lh3.googleusercontent.com/S6Kft8IJgPfNpaE0Wl7YhI6cJ5Jy9HLuynx7uAyvf-UOyIrkrSyl3yYaj5MZCNGB6C-NRsLNC-Tr-Qthpad2AQPvZlRcxmeepiSR5L1M83j8nEAHRcNgnLTFlsidi4kUtPfuES8Ax9unhgo5jm0ZnrSb_LsTt0_I-Lt4NTXU6c_1p1TkCOo0a9US7bgGmZZQFxDpf55JJcoAhnxwf1dGs2zwo4blqT8YcIKt3OjbQ1cYskEOqhicmNRR_ifttl39SiObCgLKdeRqy3zU3rfZ1CBUEDRLV2HGf2KrGD703cknVt_a_3gsAWgBugPn_4Z9H9ckLl7TJosZ5t5tocgPBBrCWmnHeRrCjwyQD50fNywj_2RLgICu-GxnCo1cOqc2JbPprefpvuEdyY02UOVXLGtSGTWrDD6bZ28KBPbnNb_pSZigO9VK50FZgwWSB3n-tsm87InBe1ajK1sqFqp5nWfCKEVX51hjaYvQMXDqsYVZddAag6x4NwAOrNhWSrfkQt3h1XqZwmQp0kdEGcF2PtZRqgIWFjb_irxHV0W9t5_YvIcr6kniond_aG_yGpxiAPHfsV6uDEiEhj4yfEhyE1EkvWjR5OoO0DNtdbPtsk8T8CBdsfSiXeCONYmChfh-DSEPld-fMondj1WLfWvaxFvOaterOq10UgctwynRlmavt5Kq-wHajLL2=w1223-h917-no" alt="my picture" /></li>
 	</ul>
+	<video width="400" controls>
+  <source src="mov_bbb.mp4" type="video/mp4">
+  <source src="mov_bbb.ogg" type="video/ogg">
+  Your browser does not support HTML5 video.
+</video>
+
+<p>
+Video courtesy of 
+<a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
+</p>
 	</p>
 </body>
 </html>
