--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,12 @@
 </head>
 <body>
 	<p>My Images</p>
+	<p><h1>This is my CV</h1>
+	<ul>
+		<li>   <iframe src="https://docs.google.com/document/d/e/2PACX-1vQzz3LRgTrsbcg12lIS2Nmp4ZrQ7C7PjJC9F0rzEnFMvAXXC8E5vjS5a9tj2Vrt7yF59746QDtVvebu/pub?embedded=true" width="1000" height="1000"></iframe>
+</li>
+	</ul>
+	</p>
 	<p>
 	<ul>
 	<li><img download src="Shovan.jpg" alt="my picture" width="128" height="128"/></li>
@@ -14,15 +20,7 @@
 	<li><img download src="https://lh3.googleusercontent.com/S6Kft8IJgPfNpaE0Wl7YhI6cJ5Jy9HLuynx7uAyvf-UOyIrkrSyl3yYaj5MZCNGB6C-NRsLNC-Tr-Qthpad2AQPvZlRcxmeepiSR5L1M83j8nEAHRcNgnLTFlsidi4kUtPfuES8Ax9unhgo5jm0ZnrSb_LsTt0_I-Lt4NTXU6c_1p1TkCOo0a9US7bgGmZZQFxDpf55JJcoAhnxwf1dGs2zwo4blqT8YcIKt3OjbQ1cYskEOqhicmNRR_ifttl39SiObCgLKdeRqy3zU3rfZ1CBUEDRLV2HGf2KrGD703cknVt_a_3gsAWgBugPn_4Z9H9ckLl7TJosZ5t5tocgPBBrCWmnHeRrCjwyQD50fNywj_2RLgICu-GxnCo1cOqc2JbPprefpvuEdyY02UOVXLGtSGTWrDD6bZ28KBPbnNb_pSZigO9VK50FZgwWSB3n-tsm87InBe1ajK1sqFqp5nWfCKEVX51hjaYvQMXDqsYVZddAag6x4NwAOrNhWSrfkQt3h1XqZwmQp0kdEGcF2PtZRqgIWFjb_irxHV0W9t5_YvIcr6kniond_aG_yGpxiAPHfsV6uDEiEhj4yfEhyE1EkvWjR5OoO0DNtdbPtsk8T8CBdsfSiXeCONYmChfh-DSEPld-fMondj1WLfWvaxFvOaterOq10UgctwynRlmavt5Kq-wHajLL2=w1223-h917-no" alt="my picture" /></li>
 	<li><img download src="https://photos.app.goo.gl/ZYJqMMx4uXzcsRNH6" alt="my picture" width="128" height="128"/></li>
 	</ul>
-	<video width="400" controls>
-  <source src="mov_bbb.mp4" type="video/mp4">
-  <source src="mov_bbb.ogg" type="video/ogg">
-  Your browser does not support HTML5 video.
-</video>
 
-<p>
-Video courtesy of 
-<a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
 </p>
 	</p>
 </body>
