--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
    <link rel="stylesheet" type="text/css" href="ball.css">
     <title>Shovan Thinks!</title> 
-  <p><img download src="Shovan.jpg" alt="my picture" width="128" height="128"/> <a href="cv.html" color="white">Click me</a></p>
+  <p><img download src="Shovan.jpg" alt="my picture" width="128" height="128"/> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
   <body class="back" tracingsrc="DSC_0152.JPG" tracingopacity="72">
     <p class="p1"style="color:MediumSeaGreen;">Ok this website is for Sharing thoughts </p>
@@ -14,7 +14,7 @@
   <div>1.ABSORBE WHAT IS NEEDED/USEFUL</div><br>
   <div>2.DISCARD THAT IS NOT USEFUL</div><br>
   <div>3.ADD TO THINGS THAT YOU ARE</div><br>
-   </div>
+   </div><a href="cv.html">Click me</a></p>
   <div> <p class="p2"style="color:Tomato;">CLICK ON THE YOUTUBE BUTTON TO CHECK ALL MY VIDEOS &amp; SUBSCRIBE ! </p>
     <button class="p3 style1" id="myButton" onClick="location.href = 'https://www.youtube.com/channel/UC5JZPZuvptirXj4dbSIZzZQ?view_as=subscriber';" button button_color="red">Youtube</button>
     <br></div>
