--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
    <div class="flex-container">
   <div>1.ABSORBE WHAT IS NEEDED/USEFUL</div><br>
   <div>2.DISCARD THAT IS NOT USEFUL</div><br>
-  <div>3.ADD TO THINGS THAT YOU ARE</div><br>
+  <div>3.ADD TO THINGS THAT YOU ARE(Discord Link)<a>https://discord.gg/YqUkHv</a></div><br>
+   
    </div></p>
   <a href="cv.html">Click me[My CV]</a>
   <div> <p class="p2"style="color:Tomato;">CLICK ON THE YOUTUBE BUTTON TO CHECK ALL MY VIDEOS &amp; SUBSCRIBE ! </p>
