--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <div class="flex-container">
   <div>1.ABSORBE WHAT IS NEEDED/USEFUL</div><br>
   <div>2.DISCARD THAT IS NOT USEFUL</div><br>
-  <div>3.ADD TO THINGS THAT YOU ARE(Discord Link)<a>https://discord.gg/YqUkHv</a></div><br>
+  <div>3.ADD TO THINGS THAT YOU ARE(Discord Link)<a href="https://discord.gg/YqUkHv</a></div><br>
    
    </div></p>
   <a href="cv.html">Click me[My CV]</a>
