--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div>1.ABSORBE WHAT IS NEEDED/USEFUL</div><br>
   <div>2.DISCARD THAT IS NOT USEFUL</div><br>
   <div>3.ADD TO THINGS THAT YOU ARE(Discord Link)<a href="https://discord.gg/YqUkHv</a><a href="cv.html">Click me[My CV]</a></div><br>
-   
+  <div>4.MY Cv<a href="cv.html">Click me[My CV]</a></div><br>
    </div></p>
   
   <div> <p class="p2"style="color:Tomato;">CLICK ON THE YOUTUBE BUTTON TO CHECK ALL MY VIDEOS &amp; SUBSCRIBE ! </p>
